--- a/src/public/lang/en.json
+++ b/src/public/lang/en.json
@@ -54,8 +54,7 @@
             "buttons": {
               "edit": "Edit",
               "delete": "Delete",
-              "disable": "Disable",
-              "duplicate": "Duplicate"
+              "disable": "Disable"
             }
           },
           "prompts": {
