feature: Start rebuilding crafting system manager app with svelte
- opens the item sheet when you click the component image

--- a/src/public/lang/en.json
+++ b/src/public/lang/en.json
@@ -54,7 +54,8 @@
             "buttons": {
               "edit": "Edit",
               "delete": "Delete",
-              "disable": "Disable"
+              "disable": "Disable",
+              "openSheet": "Open Item Sheet"
             }
           },
           "prompts": {
