--- a/src/public/lang/en.json
+++ b/src/public/lang/en.json
@@ -56,6 +56,7 @@
               "edit": "Edit",
               "delete": "Delete",
               "disable": "Disable",
+              "duplicate": "Duplicate",
               "openSheet": "Open Item Sheet"
             }
           },
