feature: Rebuild crafting system manager app with svelte
- manage component essences
- list available salvage for component
- search available salvage for component

--- a/src/public/lang/en.json
+++ b/src/public/lang/en.json
@@ -83,6 +83,10 @@
               "availableComponentsHeading": "Available Components",
               "essencesHeading": "Essences",
               "replaceItem": "Drop an item to replace"
+            },
+            "info": {
+              "noAvailableSalvage": "Add other components to {systemName} to be able to add them as Salvage to {componentName}. ",
+              "noAvailableEssences": "Add essences to {systemName} to be able to add them to {componentName}. "
             }
           },
           "prompts": {
