feature: Rebuild crafting system manager app with svelte
- tracks owned item quantity in salvage app correctly when updated or created

--- a/src/public/lang/en.json
+++ b/src/public/lang/en.json
@@ -33,6 +33,9 @@
         "unrecognisedComponent": "The Crafting Component {componentName} is not a part of this crafting system. "
       }
     },
+    "ComponentSalvageApp": {
+      "title": "Fabricate | Component Salvage | {actorName}"
+    },
     "CraftingSystemManagerApp": {
       "title": "Fabricate | Crafting System Manager",
       "tabs": {
