--- a/src/public/lang/en.json
+++ b/src/public/lang/en.json
@@ -65,6 +65,12 @@
         "details": {
           "label": "Details",
           "title": "{systemName} Details",
+          "labels": {
+            "name": "Name",
+            "author": "Author",
+            "summary": "Summary",
+            "description": "Detailed description"
+          },
           "settings": {
             "title": "Settings",
             "enabled": {
@@ -179,6 +185,9 @@
         },
         "deleteCraftingSystem": {
           "success": "The Crafting System {systemName} was successfully deleted."
+        },
+        "saveCraftingSystem": {
+          "success": "The Crafting System {systemName} was successfully updated."
         },
         "exportCraftingSystem": {
           "success": "The Crafting System {systemName} was successfully exported to {fileName}."
