feature: Tidying up Svelte implementation
- reimplements the essence modal in the essences tab

--- a/src/public/lang/en.json
+++ b/src/public/lang/en.json
@@ -144,6 +144,9 @@
         "essences": {
           "label": "Essences",
           "title": "{systemName} Essences",
+          "modal": {
+            "searchPlaceholder": "Search for an icon"
+          },
           "prompts": {
             "delete": {
               "title": "Delete essence \"{essenceName}\"?",
