feature: Tidying up Svelte implementation
- catalyst management functional, needs styling fixes

--- a/src/public/lang/en.json
+++ b/src/public/lang/en.json
@@ -178,6 +178,7 @@
             "replaced": "Replaced {previousItemName} with {itemName} in {systemName}",
             "labels": {
               "ingredientsHeading": "Ingredients",
+              "requirementsHeading": "Requirements",
               "ingredientOptionName": "Option",
               "catalystsHeading": "Catalysts",
               "resultsHeading": "Results",
