--- a/src/public/lang/en.json
+++ b/src/public/lang/en.json
@@ -37,6 +37,12 @@
         "previous": "Previous option"
       }
     },
+    "CraftingResultCarousel": {
+      "buttons": {
+        "next": "Next option",
+        "previous": "Previous option"
+      }
+    },
     "DropEventParser": {
       "errors": {
         "noElementData": "{partType} import error: Could not read element data from drop event. ",
@@ -78,9 +84,9 @@
         "doCrafting": "Crafting this recipe will remove any consumed ingredients from your inventory and add the recipe results. "
       },
       "dialog": {
-        "doCrafting": {
+        "doCraftRecipe": {
           "title": "Craft Recipe?",
-          "content": "Crafting {recipeName} remove any consumed ingredients from your inventory and add the recipe results. "
+          "content": "Crafting {recipeName} will remove any consumed ingredients from your inventory and add the recipe results. "
         }
       }
     },
