feat: #87 Allow components to be added via recipes
- components can be added from the tab but not directly to the recipe, yet
- resolves #87

--- a/src/public/lang/en.json
+++ b/src/public/lang/en.json
@@ -249,6 +249,10 @@
             }
           },
           "prompts": {
+            "importItemAsComponent": {
+              "title": "Import new component \"{componentName}\"?",
+              "content": "<p>\"{componentName}\" will be imported into \"{systemName}\" and added to this Recipe.</p>"
+            },
             "delete": {
               "title": "Delete component \"{recipeName}\"?",
               "content": "<p>This will remove \"{recipeName}\" from \"{systemName}\". This action cannot be undone.</p>"
