--- a/src/public/lang/en.json
+++ b/src/public/lang/en.json
@@ -45,11 +45,18 @@
     },
     "settings": {
       "settingDeleted": "The setting {settingPath} was deleted. ",
+      "craftingSystem": {
+        "deleted": "Deleted crafting system \"{systemName}\"",
+        "created": "",
+        "updated": ""
+      },
       "errors": {
         "invalidRead": "The stored value for the setting {settingPath} is not valid, and could not be read. {errors}",
         "invalidWrite": "The provided value for the setting {settingPath} is not valid, and could not be saved. {errors}",
         "craftingSystem": {
-          "doesNotExist": "The crafting system {craftingSystemId} does not exist. "
+          "doesNotExist": "The crafting system {craftingSystemId} does not exist. ",
+          "invalid": "The crafting system entity is not valid. Errors: {errors}. ",
+          "reservedId": "The crafting system ID {craftingSystemId} is reserved. "
         }
       }
     },
