feat: Refactor: Use the Fabricate API for all operations #126

--- a/src/public/lang/en.json
+++ b/src/public/lang/en.json
@@ -60,6 +60,11 @@
         },
         "document": {
           "notFound": "The document with UUID {documentUuid} could not be found. "
+        },
+        "recipe": {
+          "doesNotExist": "The recipe {recipeId} does not exist. ",
+          "invalid": "The recipe entity is not valid. Errors: {errors}. ",
+          "missingRecipes": "The recipes with the IDs {recipeIds} could not be found. "
         }
       }
     },
